--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "autoprefixer": "^10.4.14",
+    "i": "^0.3.7",
+    "npm": "^9.6.3",
     "postcss": "^8.4.21",
     "prisma": "4.6.1",
     "tailwindcss": "^3.2.4",
