--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie": "^0.5.1",
     "autoprefixer": "^10.4.14",
     "i": "^0.3.7",
     "npm": "^9.6.3",
