--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cookie": "^0.5.1",
+    "@types/react-modal": "^3.13.1",
     "autoprefixer": "^10.4.14",
     "i": "^0.3.7",
     "npm": "^9.6.3",
     "postcss": "^8.4.21",
     "prisma": "4.6.1",
+    "react-modal": "^3.16.1",
     "tailwindcss": "^3.2.4",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.1.1"
